--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="fr">
 <head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <link rel='stylesheet' href='assets/style.css'>
-    <title>Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon Portfolio</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <h1>Bienvenue sur mon portfolio</h1>
+    <header>
+        <div class="container">
+            <h1>Mon Portfolio</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">À propos</a></li>
+                    <li><a href="#skills">Compétences</a></li>
+                    <li><a href="#projects">Projets</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="about" class="section">
+        <div class="container">
+            <h2>À propos de moi</h2>
+            <p>Je suis un ingénieur passionné par le développement web et DevOps. J’aime créer des solutions modernes et efficaces.</p>
+        </div>
+    </section>
+
+    <section id="skills" class="section bg-light">
+        <div class="container">
+            <h2>Compétences</h2>
+            <ul class="skills-list">
+                <li>HTML & CSS</li>
+                <li>JavaScript</li>
+                <li>DevOps</li>
+                <li>Azure & Cloud Computing</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="projects" class="section">
+        <div class="container">
+            <h2>Projets</h2>
+            <div class="project-grid">
+                <div class="project">
+                    <img src="images/projet1.jpg" alt="Projet 1">
+                    <h3>Projet 1</h3>
+                    <p>Un projet de site web moderne pour un client.</p>
+                </div>
+                <div class="project">
+                    <img src="images/projet2.jpg" alt="Projet 2">
+                    <h3>Projet 2</h3>
+                    <p>Une application DevOps déployée sur Azure.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="section bg-light">
+        <div class="container">
+            <h2>Contact</h2>
+            <p>Envoyez-moi un message :</p>
+            <form>
+                <label for="name">Nom :</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email :</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Message :</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+                <button type="submit">Envoyer</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Mon Portfolio. Tous droits réservés.</p>
+        </div>
+    </footer>
 </body>
 </html>
+
